# boltffi

./: BOLTFFI_TOML_GUIDE.md  BOLTFFI_TOML_SPEC.md  Cargo.toml  README.md  cbindgen.toml  justfile
.github/workflows/: ci.yml  release.yml
benchmarks/: .gitignore
benchmarks/kotlin-jvm-bench/: build-jni.sh
benchmarks/rust-boltffi/: Cargo.toml  boltffi.toml
benchmarks/rust-uniffi/: build-kotlin.sh
boltffi/: Cargo.toml
boltffi/src/: lib.rs
boltffi_bindgen/: Cargo.toml  askama.toml
boltffi_bindgen/src/: lib.rs
boltffi_cli/: Cargo.toml
boltffi_cli/src/: build.rs  check.rs  config.rs  main.rs  target.rs
boltffi_core/: Cargo.toml
boltffi_core/src/: callback.rs  lib.rs  passable.rs  wasm.rs
boltffi_ffi_rules/: Cargo.toml
boltffi_ffi_rules/src/: callable.rs  lib.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: callback_trait.rs  class.rs  export.rs  lib.rs  params.rs  returns.rs
boltffi_tests/: Cargo.toml
boltffi_tests/src/: lib.rs
boltffi_verify/: Cargo.toml
examples/demo/: Cargo.toml  boltffi.toml  verify-platform-demos.sh
examples/wasm-demo/: Cargo.toml  boltffi.toml  test.mjs
mobiFFI_core/: build.rs
mobiFFI_core/src/: lib.rs  rustfuture.rs  subscription.rs
mobiFFI_macros/src/: lib.rs
riff/: Cargo.toml
riff/src/: lib.rs
riff_bindgen/: Cargo.toml
riff_bindgen/src/: lib.rs
riff_cli/src/: android.rs  build.rs  check.rs  config.rs  error.rs  main.rs
riff_core/src/: lib.rs
riff_ffi_rules/src/: lib.rs
riff_tests/: Cargo.toml
swift_test/: Generated.swift  mobiFFI_core.h  module.modulemap  run.sh  test.swift  test_ffi
(+393 files in other folders)
