[package]
name = "riff"
version = "0.1.0"
edition = "2024"

[features]
default = ["uuid", "url"]
fast-alloc = ["riff_core/fast-alloc"]
uuid = ["riff_core/uuid"]
chrono = ["riff_core/chrono"]
url = ["riff_core/url"]

[dependencies]
riff_core = { path = "../riff_core" }
riff_macros = { path = "../riff_macros" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
